<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recycler_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
   android:layout_margin="20dp"

   android:padding="25dp"
    android:background="@drawable/custom_layout">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

                <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                />

        </LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="horizontal">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/third"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    />

<TextView
    android:id="@+id/phone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/phone"
    android:textColorHint="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    />

</LinearLayout>


<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="horizontal">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fourth"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    />

        <TextView
            android:id="@+id/district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/district"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />

</LinearLayout>


<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="horizontal">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fifth"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    />
<TextView
    android:id="@+id/state"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/state"
    android:textColorHint="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    />
</LinearLayout>

    </LinearLayout>