<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/Gray"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Add Notes"
        android:id="@+id/notes"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/select_notes"
        android:layout_below="@+id/notes"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30sp"
        android:id="@+id/select"
        android:textSize="20sp">



    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/roundedcorner"
        android:layout_below="@+id/select"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="220dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/course_ids"
        android:paddingStart="10dp"
        android:paddingTop="5sp"
        android:textSize="18sp"
        android:id="@+id/course"
        tools:ignore="RtlSymmetry">

    </TextView>

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/roundedcorner"
        android:layout_below="@+id/course"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:backgroundTint="@color/Gray"
        android:text="@string/topics_in_notes"
        android:padding="10dp"
        android:textSize="18sp">

    </TextView>

    <TextView
        android:id="@+id/text"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@id/txt"
        android:background="@color/Gray"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/first_notes_pdf"
        android:textSize="18sp">

    </TextView>

    <Button
        android:id="@+id/selectnotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:padding="10dp"
        android:background="@drawable/roundedcorner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="@string/select_notess"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectnotes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@drawable/roundedcorner"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="@string/upload_notes"
        />











</RelativeLayout>