<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_videocam_24"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/files_mp4_pdf"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/mb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25_3_mb"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="150dp"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:layout_marginTop="25dp"/>

    <ImageView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_clear_24"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="18dp"/>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/files"
        android:layout_marginTop="5dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="35dp"
        />

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_60_done"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_below="@id/seekbar"
        android:layout_marginStart="70dp"/>

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_976_kb_s"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_below="@id/seekbar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="45dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Gray"
        android:layout_below="@id/speed"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>



</RelativeLayout>